deploy/kubernetes/simple-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nsch-ms
  name: simple-ms-deployment
  labels:
    app: simple-ms-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-ms-api
  template:
    metadata:
      namespace: nsch-ms
      labels:
        app: simple-ms-api
    spec:
      containers:
        - name: simple-ms-api
          image: nshumilova/simple-ms:1.0.0
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              memory: 100Mi
      restartPolicy: Always
