deploy/kubernetes/simple-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nsch-ms
  name: simple-ms-servise
  labels:
    app: simple-ms-api
spec:
  selector:
    app: simple-ms-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
