deploy/kubernetes/simple-ms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nsch-ms
  name: simple-ms-ingress
  labels:
    app: simple-ms-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1/
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - pathType: Prefix
        path:  /otusapp/nshumilova/(.*[^/])
        backend:
          service:
            name: simple-ms-servise
            port: 
              number: 8000
